fix request refracto ux gap height

--- a/src/assets/css/Base/HeightWidth.css
+++ b/src/assets/css/Base/HeightWidth.css
@@ -2,9 +2,6 @@
 @import '../variables.scss';
 
 /* en VH */
-.gap-2{
-    width: 56vh;
-}
 .fiction-container{    
     width: 180vh;
 }
